--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -13,6 +13,6 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS  }}
       - name: what-if
         run: |
-          az-deployment sub what-if \
+          az deployment sub what-if \
             --location westeurope \
             --template-file Docker_SQL\main.bicep
