--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -15,4 +15,4 @@ jobs:
         run: |
           az deployment sub what-if \
             --location westeurope \
-            --template-file Docker_SQL/Docker_SQL/main.bicep
+            --template-file ./main.bicep
