--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -30,4 +30,4 @@ jobs:
         run: |
           az deployment sub create \
             --location westeurope \
-            --template-file .\main.bicep
+            --template-file ./main.bicep
