--- a/.github/workflows/infrastructure_2.yml
+++ b/.github/workflows/infrastructure_2.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  what_if:
+  checkrg:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,7 +18,7 @@ jobs:
             --template-file ./main.bicep
 
   deployrg:
-    needs: what_if
+    needs: checkrg
     environment: development
     runs-on: ubuntu-latest
     steps:
@@ -32,7 +32,7 @@ jobs:
             --location westeurope \
             --template-file ./main.bicep
 
-  deploysqlserver:
+  checksqlserver:
     needs: deployrg
     environment: development
     runs-on: ubuntu-latest
@@ -43,3 +43,15 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS  }}
       - name: Deployment SQL Server and Database
         run: az deployment group what-if --mode Incremental --name rollout01 --resource-group 'rg_dev_infrastruktur' --template-file ./db2.bicep
+
+  deploysqlserver:
+    needs: checksqlserver
+    environment: development
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS  }}
+      - name: Deployment SQL Server and Database
+        run: az deployment group create --mode Incremental --name rollout01 --resource-group 'rg_dev_infrastruktur' --template-file ./db2.bicep
